--- a/server/Code/Tpl/Index/index.html
+++ b/server/Code/Tpl/Index/index.html
@@ -3,25 +3,36 @@
 <head>
 	<meta charset="UTF-8">
 	<title>Basic DataGrid - jQuery EasyUI Demo</title>
-	<link rel="stylesheet" type="text/css" href="__PUBLIC__/ThirdParty/EasyUI/themes/default/easyui.css">
-	<link rel="stylesheet" type="text/css" href="__PUBLIC__/ThirdParty/EasyUI/themes/icon.css">
-	<link rel="stylesheet" type="text/css" href="__PUBLIC__/ThirdParty/EasyUI/demo/demo.css">
-	<script type="text/javascript" src="__PUBLIC__/ThirdParty/EasyUI/jquery.min.js"></script>
-	<script type="text/javascript" src="__PUBLIC__/ThirdParty/EasyUI/jquery.easyui.min.js"></script>
+	<include file="./Code/Tpl/Public/easyUI.html"/>
+	<include file="./Code/Tpl/Public/jsonConvert.html"/>
 </head>
-<body>
-	<h2>Basic DataGrid</h2>
-	<p>The DataGrid is created from markup, no JavaScript code needed.</p>
-	<div style="margin:20px 0;"></div>
-	
-	<table class="easyui-datagrid" title="Basic DataGrid" style="width:700px;height:250px"
-			data-options="pagination:true,pageList:[10,20,30],singleSelect:true,collapsible:true,url:'__APP__/Index/LoadPage',method:'POST'">
-		<thead>
-			<tr>
-				<th data-options="field:'id',width:80">Item ID</th>
-			</tr>
-		</thead>
-	</table>
-
+<body class="easyui-layout">
+	<div data-options="region:'north',border:false" style="height:60px;background:#B3DFDA;padding:10px">north region</div>
+	<div data-options="region:'west',split:true,title:'West'" style="width:250px;padding:10px;">
+		<div class="easyui-panel" style="padding:5px">
+			<ul id="menuTree" class="easyui-tree" data-options="url:'tree_data1.json',method:'get',animate:true,lines:true"></ul>
+		</div>
+	</div>
+	<div data-options="region:'center'">
+		<div id="tt" class="easyui-tabs" style="width:100%;height:100%;">
+		    <div title="Tab1" style="padding:20px;display:none;">
+				tab1
+		    </div>
+		    <div title="Tab2" data-options="closable:true" style="overflow:auto;padding:20px;display:none;">
+				tab2
+		    </div>
+		    <div title="Tab3" data-options="iconCls:'icon-reload',closable:true" style="padding:20px;display:none;">
+				tab3
+		    </div>
+		</div>
+	</div>
+<script type="text/javascript" >
+	$('#menuTree').tree({
+	onClick: function(node){
+		$('#tt').tabs('add',{title:node.text,href:"__URL__/savaData",closable:true});
+		alert(node.text);  // alert node text property when clicked
+	}
+});
+</script>
 </body>
 </html>
