--- a/code/server/Admin/Tpl/OrderManage/orderManage.html
+++ b/code/server/Admin/Tpl/OrderManage/orderManage.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 	<meta charset="UTF-8">
-	<title>产品管理</title>
+	<title>订单管理</title>
 	<include file="./Public/Fuego/PublicPage/fuegoRes.html"/>
 </head>
 <body>
@@ -15,23 +15,21 @@
 		<a href="#" class="easyui-linkbutton" iconCls="icon-search">Search</a>
 	</div>
 	<div class="easyui-layout"data-options="fit:true">
-	<table id="productGrid" class="easyui-datagrid" title="产品管理" style="width:100%;height:95%"
+	<table id="orderGrid" class="easyui-datagrid" title="订单管理" style="width:100%;height:95%"
 			data-options="checkOnSelect:true,rownumbers:true,pagination:true,pageList:[10,20,30],singleSelect:true,
-			url:'__APP__/ProductManage/LoadPage',method:'get',toolbar:'#toolbar'">
+			url:'__APP__/OrderManage/LoadPage',method:'get',toolbar:'#toolbar'">
 		<thead>
 			<tr>
 				<th data-options="field:'ck',checkbox:true"></th>
-				<th data-options="field:'product_id',width:80">产品ID</th>
-				<th data-options="field:'product_name',width:120">产品名称</th>
-				<th data-options="field:'describe',width:80">产品描述</th>
-				<th data-options="field:'price',width:80">产品价格</th>
-				<th data-options="field:'product_status',width:80">产品状态</th>
-				<th data-options="field:'update_time',width:80">更新时间</th>
-				<th data-options="field:'end_time',width:80">截至日期</th>
-				<th data-options="field:'detail_info',width:80">详细信息</th>
-				<th data-options="field:'type_name',width:80">产品类型</th>
-				<!--  <th data-options="field:'original_price',width:80">原价</th>-->
-				<th data-options="field:'img',width:160">产品图片</th> 
+				<th hidden="true" data-options="field:'order_id',width:200">订单ID</th>
+				<th data-options="field:'order_code',width:200">订单号</th>
+				<th data-options="field:'user_name',width:120">用户名</th>
+				<th data-options="field:'create_time',width:80">创建时间</th>
+				<th data-options="field:'pay_option',width:80">支付方式</th>
+				<th data-options="field:'order_status',width:80">订单状态</th>
+				<th data-options="field:'order_type',width:80">订单类型</th>
+				<th data-options="field:'total_price',width:80">订单总价</th>
+				<th data-options="field:'total_count',width:80">产品总数</th>
 			</tr>
 		</thead>
 	</table>
@@ -82,7 +80,7 @@ function onModify(type){
 	}	
 }
 function onDelete(){
-	var row = $('#productGrid').datagrid('getSelected');
+	var row = $('#orderGrid').datagrid('getSelected');
 	if(!row)
 	{
 		fuegoAlert("请选择一条记录");
@@ -91,16 +89,16 @@ function onDelete(){
 	{
 		$.messager.confirm('确认提示', '确认删除该条记录？', function (r) {
 			if(r){
-				var json = objToJson(row.product_id);
+				var json = objToJson(row.order_id);
 				$.ajax({
 					type:"post",
-					url:"__APP__/ProductManage/Delete",
+					url:"__APP__/OrderManage/Delete",
 					data:json,
 					dataType:"json",
 					success:function(rsp){
 						if(isSuccess(rsp)){
 							//重新加载datagrid数据
-							$("#productGrid").datagrid('reload');
+							$("#orderGrid").datagrid('reload');
 						}
 						else{
 							fuegoAlert(rsp.errorMsg);
