--- a/code/server/MISP/Tpl/Index/home.html
+++ b/code/server/MISP/Tpl/Index/home.html
@@ -4,12 +4,36 @@
 	<meta charset="UTF-8">
 	<title>Basic DataGrid - jQuery EasyUI Demo</title>
 	<include file="./Public/Fuego/PublicPage/fuegoRes.html"/>
+<style type="text/css">
+   .logo
+   {
+       font-family:"微软雅黑",	"Helvetica Neue",​Helvetica,​Arial,​sans-serif;
+       font-size:28px;font-weight:bold;color:#444;        
+       cursor:default;
+       position:absolute;top:28px;left:15px;        
+       line-height:28px;
+   }    
+   .topNav
+   {
+       position:absolute;right:8px;top:10px;        
+       font-size:12px;
+       line-height:25px;
+   }
+   </style>
 </head>
 <body class="easyui-layout">
-	<div data-options="region:'north',border:false" style="height:60px;background:#B3DFDA;padding:10px">north region</div>
-	<div data-options="region:'west',split:true,title:'West'" style="width:250px;padding:10px;">
+	<div data-options="region:'north',border:false" style="height:60px;background:#B3DFDA;padding:10px">
+        <div class="logo">快客洗涤</div>
+        <div class="topNav">	
+            <a href="javascript:pwdModify()">修改密码</a> |            
+            <a href="javascript:Exit()">退出</a>
+			<a>&nbsp&nbsp</a>
+        </div>
+        <div id="pwdManage"></div>
+	</div>
+	<div data-options="region:'west',split:true,title:'系统管理'" style="width:250px;padding:10px;">
 		<div class="easyui-panel" style="padding:5px">
-			<ul id="menuTree" class="easyui-tree" data-options="url:'__APP__/Index/getMenuTree',method:'get',animate:true,lines:true"></ul>
+			<ul id="menuTree" class="easyui-tree" data-options="url:'__APP__/Index/GetMenuTree',method:'get',animate:true,lines:true"></ul>
 		</div>
 	</div>
 	<div data-options="region:'center'">
@@ -17,7 +41,7 @@
 	</div>
 	</div>
 <script type="text/javascript" >  
-    $('#menuTree').tree({
+$('#menuTree').tree({
 		onClick: function(node){  
 			    if ($('#tt').tabs('exists', node.text))
 			    {    
@@ -35,6 +59,38 @@
 		//$('#tt').tabs('add',{title:node.text,href:"__APP__/UserManage/saveData.html",closable:true,width:1000,height:1000,});
 	} 
 });
+function pwdModify(){
+	
+	//打开修改密码窗口
+	$('#pwdManage').dialog({
+	    title: '修改密码',
+	    width: 400,
+	    height: 200,
+	    closed: false,
+	    cache: false,
+	    href: '__APP__/Index/pwdModify.html',
+	    modal: true
+	});	
+}
+function Exit() {
+	$.ajax({
+		type:"post",
+		url: "__APP__/Index/Logout",
+		data:"",
+		dataType:"json",
+		success:function(rsp){
+			if(isSuccess(rsp)){
+				window.location.href="__APP__/Index/index";
+			}
+			else{
+				fuegoAlert(rsp.errorMsg);
+			}
+		},
+    	error:function(){
+    		fuegoAlert("当前ajax操作出错！");
+		}
+	});
+}
 </script>
 </body>
 </html>
