--- a/code/server/Admin/Tpl/ProductManage/productInfo.html
+++ b/code/server/Admin/Tpl/ProductManage/productInfo.html
@@ -5,7 +5,7 @@
 </head>
 <body>
     <form id="productForm" name="productForm" action="__APP__/ProductManage/Create" method="post" enctype="multipart/form-data">
-    	<div style="width:50%;float:left" >
+    	<div style="width:50%;float:left;height:220px;" >
 	    	<table cellpadding="5">
 	    		<tr>
 	    			<td>产品名称:</td>
@@ -17,12 +17,15 @@
 	   				</td>
 	    		</tr>
 	    		<tr>
-	    			<td>产品价格:</td>
-	    			<td><input class="easyui-textbox" type="text" name="price" data-options="required:true"></input></td>
+	    			<td>价格类型:</td>
+	    			<td>
+		    			<input type="radio" name="price_type" checked="checked" value="固定"><span>固定</span>
+	    				<input type="radio" name="price_type" value="面议"><span>面议</span>
+	    			</td>
 	    		</tr>
 	    		<tr>
-	    			<td>产品描述:</td>
-	    			<td><textarea style="height:60px;width:145px" name="describe"></textarea></td>
+	    			<td>产品价格:</td>
+	    			<td><input class="easyui-textbox" type="text" name="price"></input></td>
 	    		</tr>
 	    		<tr>
 	    			<td>产品类型:</td>
@@ -32,20 +35,23 @@
 	    			<td>
 	    				<input class="easyui-combobox" name="type_id" style="width:100%"
 							   data-options="url: '__APP__/ProductManage/getProductTypeList',method: 'get',
-								valueField:'type_id',textField:'type_name'">
+								valueField:'type_id',textField:'type_name',panelHeight:'auto'">
 					</td>
+	    		</tr>
+	    		<tr>
+	    			<td>产品描述:</td>
+	    			<td><textarea style="height:60px;width:145px" name="describe"></textarea></td>
 	    		</tr>
 	    	</table>
     	</div>
-    	<div style="width:50%;float:right">
+    	<div style="width:50%;float:right;height:220px;">
     		<div style="text-align:center;margin:15px auto;">
 				<div style="text-align:center;margin:15px auto;">
 					<img id="img0" src="" alt="产品照片" height="120px" width="160px">
 				</div>
 			</div>
-			<input name="img[]" type="file" id="up0" />
+			<input name="img[]" type="file" id="up0" style="margin-bottom:20px;margin-top:10px;margin-left:30px;width:200px;">
     	</div>
-    	
     </form>
     <div colspan="2" style="text-align:center;padding:5px">
     	<a class="easyui-linkbutton" iconCls="icon-ok" style="width:60px;" onclick="submitForm()">提交</a>
@@ -57,6 +63,7 @@ $(function () {
     $("#up0").uploadPreview({ Img: "img0"});
 });
 function submitForm(){
+	if($("#productForm").form('validate') == false) return;
 	if("" != $("#product_id").val())
 	 {
 		$("#productForm").attr('action', '__APP__/ProductManage/Modify');
