--- a/code/server/MISP/Tpl/CompanyManage/companyInfo.html
+++ b/code/server/MISP/Tpl/CompanyManage/companyInfo.html
@@ -13,7 +13,7 @@
    				</td>
    				<td>管理员账号:</td>
     			<td>
-    				<input id="user_name" name="user_name" class="easyui-validatebox easyui-textbox" type="text"  data-options="required:true"></input>
+    				<input id="user_name" name="user_name" class="easyui-textbox" type="text"></input>
    				</td>
    				<td style="display:none">
    					<input id="company_id" name="company_id" class="easyui-textbox" type="text"></input>
@@ -29,6 +29,20 @@
     				<input name="service_phone" class="easyui-textbox" type="text"></input>
    				</td>
     		</tr>
+    		<tr>
+    			<td>支付宝账户:</td>
+    			<td>
+    				<input name="alipay_seller" class="easyui-textbox" type="text"></input>
+   				</td>
+   				<td>支付宝ID:</td>
+    			<td>
+    				<input name="alipay_partner" class="easyui-textbox" type="text"></input>
+   				</td>
+    		</tr>
+    		<tr>
+	   			<td>支付宝私钥:</td>
+	   			<td colspan="4"><input name="alipay_private_key" class="easyui-textbox" style="width:390px;height:40px" type="text" data-options="multiline:true"></input></td>
+	   		</tr>
     		<tr>
 	   			<td>公司地址:</td>
 	   			<td colspan="4"><input name="company_addr" class="easyui-textbox" style="width:390px;height:40px" type="text" data-options="multiline:true"></input></td>
