--- a/code/server/Admin/Tpl/AdminManage/adminInfo.html
+++ b/code/server/Admin/Tpl/AdminManage/adminInfo.html
@@ -19,6 +19,16 @@
     			<td>邮箱:</td>
     			<td><input name="email" class="easyui-textbox easyui-validatebox" type="text" data-options="required:true,validType:'email'"></input></td>
     		</tr>
+    		<tr>
+    			<td>用户类型:</td>
+    			<td>
+    				<input class="easyui-combobox" name="role_id" style="width:100%"
+						   data-options="url: '__ROOT__/index.php/CommonData/GetRoleList?RoleGroupID=2',method: 'post',
+							valueField:'role_id',textField:'role_name',panelHeight:'auto'">
+							
+					<!-- RoleGroupID=2 选择的是ADMIN组 -->
+				</td>
+			</tr>
     	</table>
     </form>
     <div style="text-align:center;padding:5px;margin-top:10px">
