--- a/code/server/Admin/Tpl/AdminManage/adminManage.html
+++ b/code/server/Admin/Tpl/AdminManage/adminManage.html
@@ -33,6 +33,7 @@
 				<th data-options="field:'user_id',width:100">用户编号</th>
 				<th data-options="field:'user_name',width:120">用户账号</th>
 				<th data-options="field:'email',width:160">用户邮箱</th>
+				<th data-options="field:'role_name',width:160">用户角色</th>
 			</tr>
 		</thead>
 	</table>
@@ -57,8 +58,8 @@ function onModify(type){
 		//打开用户编辑窗口
 		$('#userModify').dialog({
 		    title: '用户信息',
-		    width: 260,
-		    height: 200,
+		    width: 280,
+		    height: 240,
 		    closed: false,
 		    cache: false,
 		    href: '__APP__/AdminManage/adminInfo.html',
@@ -108,8 +109,12 @@ function onDelete(){
 					success:function(rsp){
 						if(isSuccess(rsp)){
 							//解决最后一条记录无法删除BUG
-							 var rowIndex = $('#userGrid').datagrid('getRowIndex', row);
-					         $('#userGrid').datagrid('deleteRow', rowIndex);
+							//var rowIndex = $('#userGrid').datagrid('getRowIndex', row);
+					        //$('#userGrid').datagrid('deleteRow', rowIndex);
+					        //解决最后一条记录无法删除BUG
+					        $('#userGrid').datagrid('loadData', { total: 0, rows: [] });
+					        //重新加载datagrid数据
+							$("#userGrid").datagrid('reload');
 						}
 						else{
 							fuegoAlert(rsp.errorMsg);
