--- a/code/server/Admin/Tpl/CustomerManage/customerInfo.html
+++ b/code/server/Admin/Tpl/CustomerManage/customerInfo.html
@@ -21,8 +21,35 @@
     		<tr>
     			<td>真实姓名:</td>
     			<td><input class="easyui-textbox" type="text" name="customer_name"></input></td>
-    			<td>生日:</td>
+    			<td>性别:</td>
+    			<td>
+    				<input type="radio" name="customer_sex" checked="checked" value="男"><span>男</span>
+    				<input type="radio" name="customer_sex" value="女"><span>女</span>
+    			</td>
+    		</tr>
+    		<tr>
+    			<td>出生日期:</td>
     			<td><input id="birthday" class="easyui-datebox" value="1990-01-01" type="text" name="birthday"></input></td>
+    			<td>邮箱:</td>
+    			<td><input class="easyui-textbox" type="text" name="customer_email"></input></td>
+    		</tr>
+    		<tr>
+    			<td>会员类型:</td>
+    			<td>
+    				<input class="easyui-combobox" name="role_id" style="width:100%"
+						   data-options="url: '__ROOT__/index.php/CommonData/GetRoleList?RoleGroupID=3',method: 'post',
+							valueField:'role_id',textField:'role_name',panelHeight:'auto'">
+							
+					<!-- RoleGroupID=3 选择的是CUSTOMER组 -->
+				</td>
+    			<td>电话:</td>
+    			<td><input class="easyui-textbox" type="text" name="phone"></input></td>
+    		</tr>
+    		<tr>
+    			<td>会员卡号:</td>
+    			<td><input class="easyui-textbox" type="text" name="card_number"></input></td>
+    			<td>积分:</td>
+    			<td><input class="easyui-textbox" type="text" name="score"></input></td>
     		</tr>
     		<tr>
     			<td>家庭住址:</td>
@@ -38,13 +65,14 @@
     </div>
 <script type="text/javascript">
 function submitForm() {
+	if($("#customerForm").form('validate') == false) return;
 	var json = formToJson('#customerForm');
 	 var submitUrl = "__APP__/CustomerManage/Create";
 	 if("" != $("#user_id").val())
 	 {
 		 submitUrl = "__APP__/CustomerManage/Modify";
 	 }
-	$.ajax({
+	 $.ajax({
 		type:"post",
 		url: submitUrl,
 		data:json,
