--- a/code/server/Admin/Tpl/ProductManage/productManage.html
+++ b/code/server/Admin/Tpl/ProductManage/productManage.html
@@ -23,7 +23,7 @@
 		    			<td style="width:170px;">
 		    				<input class="easyui-combobox" name="type_id" style="width:80%"
 							   data-options="url: '__APP__/ProductManage/getProductTypeList',method: 'get',
-								valueField:'type_id',textField:'type_name'">
+								valueField:'type_id',textField:'type_name',panelHeight:'auto'">
 		   				</td>
 		   				<td >
 		   				<a class="easyui-linkbutton" iconCls="icon-search" onclick="onSearch()">搜索</a>
@@ -38,15 +38,16 @@
 		<a class="easyui-linkbutton" iconCls="icon-remove" onclick="onDelete()">删除</a>
 	</div>
 	<div class="easyui-layout"data-options="fit:true">
-	<table id="productGrid" class="easyui-datagrid" style="width:100%;height:89%"
+	<table id="productGrid" class="easyui-datagrid" style="width:100%;height:88%"
 			data-options="checkOnSelect:true,rownumbers:true,pagination:true,pageList:[10,20,30],singleSelect:true,
-			url:'__APP__/ProductManage/LoadPage',method:'post',queryParams:'',toolbar:'#toolbar'">
+			url:'__APP__/ProductManage/LoadPage',method:'post',queryParams:'',sortName:'product_id',sortOrder:'asc',remoteSort:false,toolbar:'#toolbar'">
 		<thead>
 			<tr>
 				<th data-options="field:'ck',checkbox:true"></th>
-				<th data-options="field:'product_id',width:80">产品ID</th>
+				<th data-options="field:'product_id',width:80,sortable:true" >产品ID</th>
 				<th data-options="field:'product_name',width:120">产品名称</th>
 				<th data-options="field:'describe',width:80">产品描述</th>
+				<th hidden="true" data-options="field:'price_type',width:80,formatter:formatPrice" >价格类型</th>
 				<th data-options="field:'price',width:80">产品价格</th>
 				<th data-options="field:'product_status',width:80">产品状态</th>
 				<th data-options="field:'update_time',width:80">更新时间</th>
@@ -67,6 +68,11 @@ function onSearch(){
 	$('#productGrid').datagrid('loadData', { total: 0, rows: [] });
 	$('#productGrid').datagrid('load', param);
 }
+function formatPrice(val,row){
+	if (val == "面议"){
+		return row.price = "面议";
+	}
+}
 function onModify(type){
 	var row = $('#productGrid').datagrid('getSelected');
 	if((type == "Modify")&&(!row))
@@ -79,7 +85,7 @@ function onModify(type){
 		$('#productModify').dialog({
 		    title: '产品信息',
 		    width: 520,
-		    height: 280,
+		    height: 310,
 		    closed: false,
 		    cache: false,
 		    href: '__APP__/ProductManage/productInfo.html',
@@ -129,10 +135,12 @@ function onDelete(){
 					success:function(rsp){
 						if(isSuccess(rsp)){
 							//解决最后一条记录无法删除BUG
-							 var rowIndex = $('#"productGrid"').datagrid('getRowIndex', row);
-					         $('#"productGrid"').datagrid('deleteRow', rowIndex);
-							//重新加载datagrid数据
-							//$("#productGrid").datagrid('reload');
+							//var rowIndex = $('#"productGrid"').datagrid('getRowIndex', row);
+					        //$('#"productGrid"').datagrid('deleteRow', rowIndex);
+							//解决最后一条记录无法删除BUG
+					        $('#productGrid').datagrid('loadData', { total: 0, rows: [] });
+					        //重新加载datagrid数据
+							$("#productGrid").datagrid('reload');
 						}
 						else{
 							fuegoAlert(rsp.errorMsg);
