--- a/code/server/MISP/Tpl/UserManage/userInfo.html
+++ b/code/server/MISP/Tpl/UserManage/userInfo.html
@@ -19,6 +19,16 @@
     			<td>密码:</td>
     			<td><input id="password" name="password" class="easyui-textbox easyui-validatebox" type="password" required="required" validType="length[6,20]"></input></td>
     		</tr>
+    		<tr>
+    			<td>用户类型:</td>
+    			<td>
+    				<input class="easyui-combobox" name="role_id" style="width:100%"
+						   data-options="url: '__APP__/CommonData/GetRoleList?RoleGroupID=1',method: 'post',
+							valueField:'role_id',textField:'role_name',panelHeight:'auto'">
+							
+					<!-- RoleGroupID=1 选择的是SUPER_ADMIN组-->
+				</td>
+			</tr>
     	</table>
     </form>
     <div style="text-align:center;padding:5px">
