--- a/code/server/Admin/Tpl/AdminManage/adminInfo.html
+++ b/code/server/Admin/Tpl/AdminManage/adminInfo.html
@@ -7,24 +7,24 @@
     <form id="userForm" method="post">
     	<table cellpadding="5">
     		<tr>
-    			<td>用户名:</td>
+    			<td>员工账号:</td>
     			<td>
-    				<input id="user_name" name="user_name" class="easyui-validatebox easyui-textbox" type="text"  data-options="required:true"></input>
+    				<input id="user_name" name="user_name" class="easyui-textbox" type="text"  data-options="required:true,validType:{length:[4,20]}"/>
    				</td>
    				<td style="display:none">
-   					<input id="user_id" name="user_id" class="easyui-textbox" type="text"></input>
+   					<input id="user_id" name="user_id" class="easyui-textbox" type="text"/>
    				</td>
     		</tr>
     		<tr>
-    			<td>邮箱:</td>
-    			<td><input name="email" class="easyui-textbox easyui-validatebox" type="text" data-options="required:true,validType:'email'"></input></td>
+    			<td>员工邮箱:</td>
+    			<td><input name="email" class="easyui-textbox" type="text" data-options="required:true,validType:['email','length[0,48]']"/></td>
     		</tr>
     		<tr>
-    			<td>用户类型:</td>
+    			<td>员工类型:</td>
     			<td>
     				<input class="easyui-combobox" name="role_id" style="width:100%"
 						   data-options="url: '__ROOT__/index.php/CommonData/GetRoleList?RoleGroupID=2',method: 'post',
-							valueField:'role_id',textField:'role_name',panelHeight:'auto'">
+							valueField:'role_id',textField:'role_name',panelHeight:'auto',required:true,editable:false"/>
 							
 					<!-- RoleGroupID=2 选择的是ADMIN组 -->
 				</td>
