--- a/code/server/Admin/Tpl/AdminManage/adminManage.html
+++ b/code/server/Admin/Tpl/AdminManage/adminManage.html
@@ -16,7 +16,7 @@
 				</td>
 				<td>
 					<form id="searchForm" method="post">
-					<input name="user_name" class="easyui-textbox" data-options="prompt:'请输入用户名'" style="width:120px">
+					<input name="user_name" class="easyui-textbox" data-options="prompt:'请输入用户名',validType:{length:[0,20]}" style="width:120px">
 					<a class="easyui-linkbutton" iconCls="icon-search" onclick="onSearch()">搜索</a>
 					</form>
 				</td>
@@ -30,10 +30,10 @@
 		<thead>
 			<tr>
 				<th data-options="field:'ck',checkbox:true"></th>
-				<th data-options="field:'user_id',width:100">用户编号</th>
-				<th data-options="field:'user_name',width:120">用户账号</th>
-				<th data-options="field:'email',width:160">用户邮箱</th>
-				<th data-options="field:'role_name',width:160">用户角色</th>
+				<th data-options="field:'user_id',width:100">员工编号</th>
+				<th data-options="field:'user_name',width:120">员工账号</th>
+				<th data-options="field:'email',width:160">员工邮箱</th>
+				<th data-options="field:'role_name',width:160">员工角色</th>
 			</tr>
 		</thead>
 	</table>
@@ -41,6 +41,7 @@
 	<div id="userModify" style="padding-left:15px;padding-top:10px;"></div>
 <script type="text/javascript">
 function onSearch(){
+	if($("#searchForm").form('validate') == false) return;
 	var json = buildRequest('#searchForm');
 	var param = {"data" : json};
 	$('#userGrid').datagrid('loadData', { total: 0, rows: [] });
@@ -57,9 +58,9 @@ function onModify(type){
 	{	
 		//打开用户编辑窗口
 		$('#userModify').dialog({
-		    title: '用户信息',
+		    title: '员工信息',
 		    width: 280,
-		    height: 240,
+		    height: 220,
 		    closed: false,
 		    cache: false,
 		    href: '__APP__/AdminManage/adminInfo.html',
