--- a/code/server/Admin/Tpl/ProductManage/productInfo.html
+++ b/code/server/Admin/Tpl/ProductManage/productInfo.html
@@ -10,7 +10,7 @@
 	    		<tr>
 	    			<td>产品名称:</td>
 	    			<td>
-	    				<input class="easyui-textbox" type="text" name="product_name" data-options="required:true"></input>
+	    				<input class="easyui-textbox" type="text" name="product_name" data-options="required:true,validType:['length[1,12]']"></input>
 	   				</td>
 	   				<td style="display:none">
 	   					<input id="product_id" name="product_id" class="easyui-textbox" type="text" ></input>
@@ -25,7 +25,7 @@
 	    		</tr>
 	    		<tr>
 	    			<td>产品价格:</td>
-	    			<td><input class="easyui-textbox" type="text" name="price"></input></td>
+	    			<td><input class="easyui-textbox" type="text" name="price" data-options="validType:['intOrFloat','length[0,8]']"/></td>
 	    		</tr>
 	    		<tr>
 	    			<td>产品类型:</td>
@@ -35,12 +35,12 @@
 	    			<td>
 	    				<input class="easyui-combobox" name="type_id" style="width:100%"
 							   data-options="url: '__APP__/ProductManage/getProductTypeList',method: 'get',
-								valueField:'type_id',textField:'type_name',panelHeight:'auto'">
+								valueField:'type_id',textField:'type_name',panelHeight:'auto',required:true,validType:['chinese'],editable:false">
 					</td>
 	    		</tr>
 	    		<tr>
 	    			<td>产品描述:</td>
-	    			<td><textarea style="height:60px;width:145px" name="describe"></textarea></td>
+	    			<td><textarea style="height:60px;width:145px" class="easyui-validatebox" name="describe" data-options="validType:['length[0,50]']"></textarea></td>
 	    		</tr>
 	    	</table>
     	</div>
@@ -50,7 +50,7 @@
 					<img id="img0" src="" alt="产品照片" height="120px" width="160px">
 				</div>
 			</div>
-			<input name="img[]" type="file" id="up0" style="margin-bottom:20px;margin-top:10px;margin-left:30px;width:200px;">
+			<input name="img[]" type="file" id="up0" onclick="Change()" style="margin-bottom:20px;margin-top:10px;margin-left:30px;width:200px;">
     	</div>
     </form>
     <div colspan="2" style="text-align:center;padding:5px">
@@ -59,6 +59,11 @@
     	<a class="easyui-linkbutton" iconCls="icon-cancel" style="width:60px;" onclick="$('#productModify').dialog('close')">关闭</a>
     </div>
 <script type="text/javascript">
+function Change()
+{	
+	$("#img0").attr('src', '__PUBLIC__/Fuego/Uploads/'+$("#img").val());
+	//var up = $("#img0").attr("src",'');//清空图片预览内容 
+}
 $(function () {
     $("#up0").uploadPreview({ Img: "img0"});
 });
