--- a/code/server/Admin/Tpl/ProductManage/productManage.html
+++ b/code/server/Admin/Tpl/ProductManage/productManage.html
@@ -44,18 +44,19 @@
 		<thead>
 			<tr>
 				<th data-options="field:'ck',checkbox:true"></th>
-				<th data-options="field:'product_id',width:80,sortable:true" >产品ID</th>
-				<th data-options="field:'product_name',width:120">产品名称</th>
-				<th data-options="field:'describe',width:80">产品描述</th>
+				<th data-options="field:'product_id',width:80,sortable:true" >产品编号</th>
 				<th hidden="true" data-options="field:'price_type',width:80,formatter:formatPrice" >价格类型</th>
-				<th data-options="field:'price',width:80">产品价格</th>
-				<th data-options="field:'product_status',width:80">产品状态</th>
+				<th data-options="field:'product_name',width:180">产品名称</th>
+				<th data-options="field:'price',width:100">产品价格</th>
+				<th data-options="field:'type_name',width:120">产品类型</th>
+				<th data-options="field:'img',width:200">产品图片</th> 
+				<th data-options="field:'describe',width:280">产品描述</th>
+				
+				<!--<th data-options="field:'product_status',width:80">产品状态</th>
 				<th data-options="field:'update_time',width:80">更新时间</th>
 				<th data-options="field:'end_time',width:80">截至日期</th>
 				<th data-options="field:'detail_info',width:80">详细信息</th>
-				<th data-options="field:'type_name',width:80">产品类型</th>
-				<!--  <th data-options="field:'original_price',width:80">原价</th>-->
-				<th data-options="field:'img',width:160">产品图片</th> 
+				<th data-options="field:'original_price',width:80">原价</th>-->
 			</tr>
 		</thead>
 	</table>
