--- a/code/server/Admin/Tpl/OrderManage/orderManage.html
+++ b/code/server/Admin/Tpl/OrderManage/orderManage.html
@@ -13,19 +13,19 @@
                     <tr>
                     	<td style="width:60px;">订单编号:</td>
 		    			<td style="width:170px;">
-		    				<input name="order_code" class="easyui-textbox" type="text"></input>
+		    				<input name="order_code" class="easyui-textbox" type="text" data-options="validType:{length:[0,20]}"/>
 		   				</td>
 		   				<td style="width:60px;">会员帐号:</td>
 		    			<td style="width:170px;">
-		    				<input name="user_name" class="easyui-textbox" type="text"></input>
+		    				<input name="user_name" class="easyui-textbox" type="text" data-options="validType:{length:[0,20]}"/>
 		   				</td>
 		   				<td style="width:60px;">下单时间:</td>
 		    			<td style="width:80px;">
-		    				<input name="start_time" style="width:100px" class="easyui-datebox" type="text" ></input>
+		    				<input name="start_time" style="width:100px" class="easyui-datebox" type="text"/>
 		   				</td>
 		   				<td align="center">--</td>
 		   				<td style="width:120px;">
-		    				<input name="end_time" style="width:100px" class="easyui-datebox" type="text"></input>
+		    				<input name="end_time" style="width:100px" class="easyui-datebox" type="text"/>
 		   				</td>
 		   				<td >
 		   				<a class="easyui-linkbutton" iconCls="icon-search" onclick="onSearch()">搜索</a>
@@ -47,15 +47,17 @@
 			<tr>
 				<th data-options="field:'ck',checkbox:true"></th>
 				<th hidden="true" data-options="field:'order_id',width:200">订单ID</th>
-				<th data-options="field:'order_code',width:200">订单编号</th>
+				<th hidden="true" data-options="field:'price_type',width:80,formatter:formatPrice" >价格类型</th>
+				<th data-options="field:'order_code',width:160">订单编号</th>
+				<!--<th data-options="field:'order_name',width:100">订单名称</th>-->
 				<th data-options="field:'user_name',width:120">会员账号</th>
-				<th data-options="field:'create_time',width:80">创建时间</th>
+				<th data-options="field:'create_time',width:160">下单时间</th>
 				<th data-options="field:'pay_option',width:80">支付方式</th>
 				<th data-options="field:'order_status',width:80">订单状态</th>
 				<th data-options="field:'order_type',width:80">订单类型</th>
-				<th data-options="field:'total_price',width:80">订单总价</th>
 				<th data-options="field:'total_count',width:80">产品总数</th>
-				<th data-options="field:'order_note',width:80">订单备注</th>
+				<th data-options="field:'total_price',width:80">订单总价</th>
+				<th data-options="field:'order_note',width:200">订单备注</th>
 			</tr>
 		</thead>
 	</table>
@@ -67,6 +69,11 @@ function onSearch(){
 	var param = {"data" : json};
 	$('#orderGrid').datagrid('loadData', { total: 0, rows: [] });
 	$('#orderGrid').datagrid('load', param);
+}
+function formatPrice(val,row){
+	if (val == "面议"){
+		return row.total_price = "面议";
+	}
 }
 //查看订单详情
 function onDetailInfo(){
@@ -129,9 +136,9 @@ function onUpdateOrder(){
 	var rows = $('#orderGrid').datagrid('getChecked');
 	var ids = [];
     for (var i = 0 ; i < rows.length; i++) {
- 	 	if(rows[i].order_status != "已下单")
+ 	 	if((rows[i].order_status != "已下单")&&(rows[i].order_status != "付款成功"))
 		 {
-			 fuegoAlert("所选订单状态异常，请确认后重新选择");
+			 fuegoAlert("所选订单状态无法进行此操作，请确认后重新选择");
 			 return;
 		 }
         ids.push(rows[i].order_id);
@@ -177,6 +184,11 @@ function onDelete(){
 	}
 	else
 	{
+		if(row.order_status != "已作废")
+		 {
+			 fuegoAlert("该订单无法删除，请选择已作废的订单");
+			 return;
+		 }
 		$.messager.confirm('确认提示', '确认删除该条记录？', function (r) {
 			if(r){
 				var json = objToJson(row.order_id);
