更新网站公司简介页面

--- a/code/LaundryWeb/CompanyInfo.html
+++ b/code/LaundryWeb/CompanyInfo.html
@@ -32,8 +32,9 @@
      <div class="nav-list"> 
       <ul class="container"> 
        <li class="navlist"> 
-        <div class="clearfix"> 
-         <a href="/cn/index.htm#">公司简介</a> 
+        <div class="clearfix">
+         <a href="Index.html" class="js-no-menu no-menu">首页</a>  
+         <a href="CompanyInfo.html" class="js-no-menu no-menu">公司简介</a>
          <a href="http://www.huawei.com/cn/all-solutions/">设备</a> 
          <a href="http://www.huawei.com/cn/services/index.htm">技术</a> 
          <a href="http://www.huawei.com/cn/all-products/">加盟</a> 
@@ -88,9 +89,9 @@
 				</div>		
 			</div>
 		</div>
-		<div class="grid_8">
+		<div class="grid_10">
 			<div class="bound no_bottom">
-				<div class="grid_12 now-site">
+				<div class="grid_10 now-site">
 					<div class="title">
 						媒体热点
 					</div>
@@ -101,17 +102,37 @@
 	     			
 
 		<div class="block press">
-			<div class="content">	
-			<!--SortSpec = sortext-->
-				
-			We are sorry,No references information!!!
+			<div class="content">
+			<p style="display:none">News Start</p>
+			<p class="detail">
+				&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp[中国，广州，2015年1月30日] 中国联合网络通信有限公司广东省分公司（以下简称“广东联通”）和华为今日宣布，双方通过联合创新，基于华为智能感知方案完成了原子路由器全球首次商用部署，助力广东联通超卓承载网建设，为用户带来最佳的移动业务体验。</p>
+			<p class="detail">
+　　				4G/3G数据商业时代，用户网络体验感知的重要性凸显到前所未有高度。中国联通集团制定了 “移动宽带领先与一体化创新” 的战略，构建“LTE+WCDMA”协同领先优势和全集团4G集中运营体系。广东联通创新地提出了以全客户、全业务、全流程、端到端为核心的“卓越体验”思想，从关注网络指标的KPI评价体系向关注业务、关注客户的感知评价业务质量指标KQI转变。</p>
+
+			<p class="detail">　　承载网能够端到端的拉通用户业务，是保障用户体验的关键，其地位非常重要。广东联通提出打造超卓承载网的战略目标，保证客户体验，向以业务KQI指导建网转变。面对在超卓承载网的构筑中面临的无基础数据、无现网感知工具、无评价体系等一系列问题，广东联通和华为聚焦前沿技术探索，大胆创新，实现了业界最小原子路由器的首次商用，构建超卓承载网，强化“上网最快、覆盖最广、体验最好”，全面打造全感知、全网络的“超卓网络”。“超”即网络超越引领；“卓”即用户卓越体验，聚焦能力，体验和效益。</p>
 			
+			<p class="detail">　　本次广东联通超卓承载网的成功部署具备五大创新意义。</p>
+			
+			<p class="detail">　　一是业界最小的原子路由器全球首商用部署：可无缝接入4G/3G移动承载网络，实现设备OAM（Operation Administration and Maintenance操作、管理、维护）能力平滑扩展，点亮网络。</p>
+			
+			<p class="detail">　　二是创新的超高精度性能测量技术－IP FPM：针对用户的不同业务，对丢包率、误码率、时延、抖动等KPI指标进行高精度测量，支持快速故障定界和定位，对流量趋势进行精准评估和预测，对不同类型的客户提供差异化的服务和保障。</p>
+			
+			<p class="detail">　　三是创新的“流量快照”技术：有效识别瞬间峰值，实时抓拍网络流量快照，实现秒级检测，成功解决了网络精准规划难题。</p>
+			
+			<p class="detail">　　四是创新的“抗拥塞”技术：有效解决了突发流量导致的拥塞、丢包和抖动问题。</p>
+			
+			<p class="detail">　　五是可视化的网络感知大数据分析平台－uTraffic：基于丰富的大数据汇总和实时分析，自动提供有效的承载网络优化建议。</p>
+			
+			<p class="detail">　　广东联通表示，此次联合华为基于原子路由器的创新实践，成功将原子路由器方案引入广东联通移动承载网络，完美地契合了超卓的发展战略，实现了超越引领，卓越体验。</p>
+			
+			<p class="detail">　　华为路由器与电信以太产品线总裁盖刚表示：“全球首个原子路由器的商用协助了广东联通“超卓网络”落地实践，充分证明华为在IP领域的技术创新、端到端方案成熟度和商用可部署性。华为将持续聚焦客户网络面临的挑战，坚持提升管道能力，助力客户打造金管道，开放网络，实现网络增值。”</p>
+			
+			<p style="display:none">News End</p>
 			</div>
+			<img src="./img/bmgc.jpg" />
 		</div>	
 		</div>
-		
 		<div class="clear"></div>
-	
 	</div>
   </div>
   <div id="footer"> 
