--- a/code/LaundryWeb/Index.html
+++ b/code/LaundryWeb/Index.html
@@ -35,11 +35,13 @@
      <div class="nav-list"> 
       <ul class="container"> 
        <li class="navlist"> 
-        <div class="clearfix"> 
-         <a href="/cn/index.htm#">公司简介</a> 
+        <div class="clearfix">
+         <a href="Index.html" class="js-no-menu no-menu">首页</a>  
+         <a href="CompanyInfo.html" class="js-no-menu no-menu">公司简介</a> 
          <a href="http://www.huawei.com/cn/all-solutions/">设备</a> 
          <a href="http://www.huawei.com/cn/services/index.htm">技术</a> 
-         <a href="http://www.huawei.com/cn/all-products/">加盟</a> 
+         <a href="http://www.huawei.com/cn/all-products/">加盟</a>
+         <a href="http://www.huawei.com/cn/all-products/">APP下载</a>  
          <a href="/cn/index.htm#">联系我们</a>
         </div> 
 		</li> 
