完成APP订单处理接口

--- a/code/server/Admin/Tpl/AdminManage/adminManage.html
+++ b/code/server/Admin/Tpl/AdminManage/adminManage.html
@@ -9,7 +9,7 @@
 	<div id="toolbar" style="padding:5px;height:auto">
 		<table style="width:100%;">
         	<tr>
-            	<td style="width:17%;">
+            	<td style="width:200px;">
 					<a class="easyui-linkbutton" iconCls="icon-add" onclick="onModify('Create')">增加</a>
 					<a class="easyui-linkbutton" iconCls="icon-edit" onclick="onModify('Modify')">编辑</a>
 					<a class="easyui-linkbutton" iconCls="icon-remove" onclick="onDelete()">删除</a>
