更新公司简介页面

--- a/code/LaundryWeb/CompanyInfo.html
+++ b/code/LaundryWeb/CompanyInfo.html
@@ -34,10 +34,11 @@
        <li class="navlist"> 
         <div class="clearfix">
          <a href="Index.html" class="js-no-menu no-menu">首页</a>  
-         <a href="CompanyInfo.html" class="js-no-menu no-menu">公司简介</a>
+         <a href="CompanyInfo.html" class="js-no-menu no-menu">公司简介</a> 
          <a href="http://www.huawei.com/cn/all-solutions/">设备</a> 
          <a href="http://www.huawei.com/cn/services/index.htm">技术</a> 
-         <a href="http://www.huawei.com/cn/all-products/">加盟</a> 
+         <a href="http://www.huawei.com/cn/all-products/">加盟</a>
+         <a href="http://www.huawei.com/cn/all-products/">APP下载</a>  
          <a href="/cn/index.htm#">联系我们</a>
         </div> 
 		</li> 
@@ -93,7 +94,7 @@
 			<div class="bound no_bottom">
 				<div class="grid_10 now-site">
 					<div class="title">
-						媒体热点
+						快客洗涤公司简介
 					</div>
 					<div class="clear"></div>				
 				</div>
@@ -105,27 +106,19 @@
 			<div class="content">
 			<p style="display:none">News Start</p>
 			<p class="detail">
-				&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp[中国，广州，2015年1月30日] 中国联合网络通信有限公司广东省分公司（以下简称“广东联通”）和华为今日宣布，双方通过联合创新，基于华为智能感知方案完成了原子路由器全球首次商用部署，助力广东联通超卓承载网建设，为用户带来最佳的移动业务体验。</p>
+				&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp十九世纪中叶，在法国巴黎一个普通的服装店里，年轻的裁缝乔利·贝朗正在为一件不小心被煤油污染的
+				贵重衣服而焦急万分：这怎么赔得起啊?但煤油浸过的地方不仅没有污痕，反倒比别处显的更加干净。乔利因此
+				受到启发，1855年，法国巴黎诞生了世界上第一家干洗店。在此后漫长的时间里，做为世界服装之都的一个新
+				兴行业，干洗业在这个拥有灿烂文明和悠久历史的浪漫国度里，孕育、滋养、发展着，时至今日，干洗业已经
+				发展成为一个跨行业、多学科、世界性的朝阳行业。</p>
 			<p class="detail">
-　　				4G/3G数据商业时代，用户网络体验感知的重要性凸显到前所未有高度。中国联通集团制定了 “移动宽带领先与一体化创新” 的战略，构建“LTE+WCDMA”协同领先优势和全集团4G集中运营体系。广东联通创新地提出了以全客户、全业务、全流程、端到端为核心的“卓越体验”思想，从关注网络指标的KPI评价体系向关注业务、关注客户的感知评价业务质量指标KQI转变。</p>
+　　				“Drolohq”，作为法国干洗业界的知名品牌，2000年经过特许进入中国，在儒家文化的溯源地山东济南
+			  成立了朵拉国际洗衣连锁中国总部-济南朵拉洗业有限公司，实现了两种文化的完美契合。</p>
 
-			<p class="detail">　　承载网能够端到端的拉通用户业务，是保障用户体验的关键，其地位非常重要。广东联通提出打造超卓承载网的战略目标，保证客户体验，向以业务KQI指导建网转变。面对在超卓承载网的构筑中面临的无基础数据、无现网感知工具、无评价体系等一系列问题，广东联通和华为聚焦前沿技术探索，大胆创新，实现了业界最小原子路由器的首次商用，构建超卓承载网，强化“上网最快、覆盖最广、体验最好”，全面打造全感知、全网络的“超卓网络”。“超”即网络超越引领；“卓”即用户卓越体验，聚焦能力，体验和效益。</p>
+			<p class="detail">
+				“Drolohq”秉承法兰西悠久的洗业文化，整合全球顶极的洗业资源，不断追求诚信、完美、卓越的个性化品牌服务，经过11年的发展，带有金百合标志的“Drolohq”高质洗衣连锁店已成为国内最具实力和影响力的大型洗衣连锁特许加盟机构之一，在国内拥有数十家连锁洗业公司，数百家加盟代理商，拥有近千名洗衣技师，已经为中国几千万消费者提供了绿色、健康、环保的专业洗衣服务。</p>
 			
-			<p class="detail">　　本次广东联通超卓承载网的成功部署具备五大创新意义。</p>
-			
-			<p class="detail">　　一是业界最小的原子路由器全球首商用部署：可无缝接入4G/3G移动承载网络，实现设备OAM（Operation Administration and Maintenance操作、管理、维护）能力平滑扩展，点亮网络。</p>
-			
-			<p class="detail">　　二是创新的超高精度性能测量技术－IP FPM：针对用户的不同业务，对丢包率、误码率、时延、抖动等KPI指标进行高精度测量，支持快速故障定界和定位，对流量趋势进行精准评估和预测，对不同类型的客户提供差异化的服务和保障。</p>
-			
-			<p class="detail">　　三是创新的“流量快照”技术：有效识别瞬间峰值，实时抓拍网络流量快照，实现秒级检测，成功解决了网络精准规划难题。</p>
-			
-			<p class="detail">　　四是创新的“抗拥塞”技术：有效解决了突发流量导致的拥塞、丢包和抖动问题。</p>
-			
-			<p class="detail">　　五是可视化的网络感知大数据分析平台－uTraffic：基于丰富的大数据汇总和实时分析，自动提供有效的承载网络优化建议。</p>
-			
-			<p class="detail">　　广东联通表示，此次联合华为基于原子路由器的创新实践，成功将原子路由器方案引入广东联通移动承载网络，完美地契合了超卓的发展战略，实现了超越引领，卓越体验。</p>
-			
-			<p class="detail">　　华为路由器与电信以太产品线总裁盖刚表示：“全球首个原子路由器的商用协助了广东联通“超卓网络”落地实践，充分证明华为在IP领域的技术创新、端到端方案成熟度和商用可部署性。华为将持续聚焦客户网络面临的挑战，坚持提升管道能力，助力客户打造金管道，开放网络，实现网络增值。”</p>
+			<p class="detail">　　作为国际洗涤协会常务理事单位，“Drolohq”始终坚持把洗涤设备和耗材的研制以及特许经营模式的探索和发展作为品牌发展的助力，通过“Drolohq”独有的高科技、高质量、高标准的“高质洗衣”理念，融合“Drolohq”绿色、健康、环保的洗业文化，全力打造最适合于中国的特许经营模式和“Drolohq”优质、高效的运营支持系统，相信“Drolohq”必将和志同道合的投资同盟在中国市场再次赢得胜利和辉煌，并保持“Drolohq”品牌在中国洗涤行业的领先地位，进一步实现品牌价值的社会化，全力推动中国洗业健康、持续的发展，为中国更多的消费者创造高品质的生活。</p>
 			
 			<p style="display:none">News End</p>
 			</div>
